--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   display: none;
 }
 
-#textbox {
+.textbox {
     border-radius: 25px;
     border: 2px solid white;
     padding: 20px; 
@@ -80,4 +80,92 @@
   width: 50px;
   height: 50px;
   animation-delay: 0s;
+}
+
+@keyframes animate {
+	0%{
+		transform: translateY(0) rotate(0deg);
+		opacity: 1;
+	}
+	100%{
+		transform: translateY(-800px) rotate(360deg);
+		opacity: 0;
+	}
+}
+
+#personalize_button {
+ padding-top: 10px;
+}
+
+#picture_logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#personalize_questions {
+  height: 0px;
+  overflow: hidden;
+}
+
+/** w3schools toggle switch: https://www.w3schools.com/howto/howto_css_switch.asp **/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: white;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px white;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(17px);
+  -ms-transform: translateX(17px);
+  transform: translateX(17px);
+  background-color: #9198e5;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
